package shopco.backend.application.dto.profile;

public class UpdateProfileDTO {
    public String name;
    public String avatarUrl; // maps to image field
}
